# ohtu-miniprojekti

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  retro.md
.github/workflows/: ci.yaml
misc/: burndown.md
src/: app.py  bibtex_generator.py  db_helper.py  doi_utils.py  populate_test_data.py  schema.sql  util.py
src/entities/: associations.py  reference.py  tag.py
src/repositories/: reference_repository.py
src/static/: main.css  main.js
src/story_tests/: create_reference.robot  delete_reference.robot  doi_lookup.robot  edit_reference.robot  export_bibtex.robot  frontpage.robot  resource.robot  search_reference.robot
src/templates/: delete_reference.html  edit_reference.html  index.html  layout.html  new_article.html  new_book.html  new_inproceedings.html  new_misc.html  new_reference.html  new_reference_doi.html  preview_bibtex.html  search_references.html  show_reference.html
src/tests/: app_routes_test.py  bibtex_generator_test.py  confrest.py  reference_repository_test.py  test_doi_utils.py  test_reference_repository_doi.py  test_reference_repository_helpers.py  validation_test.py
src/tests/fixtures/: crossref_test_bookdoi.json  crossref_test_procdoi.json  crossref_test_testdoi.json
tests/: test_doi_utils.py
